# Mail-magazine

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml
.github/: CICD_SETUP.md
.github/workflows/: analyze-mailmag.yml  auto-merge.yml  ci.yml  deploy.yml  pages.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  client.py  newsletter.py  product.py  template.py
backend/app/routers/: clients.py  generation.py  newsletters.py  products.py  templates.py
backend/app/schemas/: client.py  newsletter.py  product.py  template.py
backend/app/services/: claude_client.py  csv_importer.py  generation.py  mall_converter.py  prompt_builder.py  slot_engine.py
data/: config.example.json
db/: init.sql
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BrandThemeApply.tsx  CopyButton.tsx  DashboardOutputs.tsx  EventBadge.tsx  EventCalendar.tsx  HtmlPreview.tsx  HtmlSourceEditor.tsx  InstructionsPanel.tsx  OutputDetailContent.tsx  OutputEditor.tsx  OutputsListClient.tsx  QuickStartCard.tsx  RakutenResultsPanel.tsx  ReflectionEditor.tsx  ResultsClient.tsx  ResultsForm.tsx  (+4 more)
scripts/: README.md  analyze-mailmag.mjs  fetch-rakuten-public.mjs  fetch-rakuten.mjs
tampermonkey/: README.md  rakuten-rmail-import.user.js
templates/: noahl_ec.html  noahl_rakuten.html  rakuten_product_focus.html  rakuten_ranking.html  rakuten_sale.html
(+58 files in other folders)
