[project]
name = "mail-magazine-backend"
version = "0.1.0"
description = "Newsletter auto-generation web application backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "anthropic>=0.39.0",
    "chardet>=5.2.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.0",
    "cssutils>=2.9.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
